// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`find function call accept custom identifier names over configuration 1`] = `
"import xyz from 'x';
xyz({
  \\"@raw\\": \\".a-id {\\\\n  color: red;\\\\n}\\"
}, {
  \\"classes\\": {
    \\"a\\": \\"a-id\\"
  }
});"
`;

exports[`find function call decorators 1`] = `
"import injectSheet from 'react-jss';

@injectSheet({
  \\"@raw\\": \\".a-id {\\\\n  color: red;\\\\n}\\"
}, {
  \\"classes\\": {
    \\"a\\": \\"a-id\\"
  }
})
class A {}

;"
`;

exports[`find function call support default createStyleSheet identifier 1`] = `
"import jss from 'jss';
jss.createStyleSheet({
  \\"@raw\\": \\".a-id {\\\\n  color: red;\\\\n}\\"
}, {
  \\"classes\\": {
    \\"a\\": \\"a-id\\"
  }
});"
`;

exports[`find function call support package name with path to a module 1`] = `
"import jss from 'jss/something';
jss.createStyleSheet({
  \\"@raw\\": \\".a-id {\\\\n  color: red;\\\\n}\\"
}, {
  \\"classes\\": {
    \\"a\\": \\"a-id\\"
  }
});"
`;
